--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Piškvorky</h1>
     
+<div class="container">
+
+    <img src="uvodni.jpg" alt="piskvorky">
+    
+    <h1>Piškvorky</h1>
+
+    <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
+
+    <div class="buttons">
+        <div class="rules">Pravidla</div>
+        <div class="start">Začít hrát</div>    
+    </div>
+</div>
+
 </body>
 </html>
