--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
     <img src="uvodni.jpg" alt="piskvorky">
     
+    <div class="content">
     <h1>Piškvorky</h1>
 
     <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
+    </div>
 
     <div class="buttons">
         <div class="rules">Pravidla</div>
