--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     <p>Piškvorky jsou velmi oblíbená společenská hra pro dva hráče. Obvykle se hraje s tužkou a čtverečkovaným papírem. Nyní můžete využít naši skvělou aplikaci, takže už nepotřebujete ani tužku a nemusíte hledat čtverečkovaný papír. Přejeme vám hodně zábavy!</p>
     </div>
 
-    <div class="buttons">
-        <div class="rules">Pravidla</div>
-        <div class="start">Začít hrát</div>    
-    </div>
+    <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="btn rules">
+        Pravidla
+      </a>
+    <a href="index.html" class="btn start"> Začít hrát </a>
+
 </div>
 
 </body>
