piskvorky2, nefunguje flexbox

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-    
 <div class="container">
 
     <img src="uvodni.jpg" alt="piskvorky">
@@ -24,7 +23,7 @@
     <a href="https://czechitas-podklady.cz/Piskvorky-pravidla/" class="btn rules">
         Pravidla
       </a>
-    <a href="index.html" class="btn start"> Začít hrát </a>
+    <a href="hra.html" class="btn start"> Začít hrát </a>
 
 </div>
 
