ready for 2th review

--- a/hra.html
+++ b/hra.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="backsheet">
@@ -17,11 +20,11 @@
                 </div>
 
                 <div class="menu--right">
-                <a href="index.html"></a>
-                <img class="home" src="home.svg" alt="home">
-                <a href="hra.html"></a>
+                <a href="index.html">
+                <img class="home" src="home.svg" alt="home"></a>
+                <a href="hra.html">
                 <img class="restart" 
-                src="restart.svg" alt="play">
+                src="restart.svg" alt="play"></a>
                 </div>
             </div>    
             </header>
