--- a/hra.html
+++ b/hra.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="hra.js"></script>
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,7 @@
             <h1>Piškvorky</h1>
             <div class="menu">
                 <div class="menu--left"> 
-                HRAJE: <img class="circle" src="circle.svg" alt="circle">
+                HRAJE: <img id="current__player" src="circle.svg" alt="circle">
                 </div>
 
                 <div class="menu--right">
@@ -24,7 +25,7 @@
                 <img class="home" src="home.svg" alt="home"></a>
                 <a href="hra.html">
                 <img class="restart" 
-                src="restart.svg" alt="play"></a>
+                src="restart.svg" alt="restart"></a>
                 </div>
             </div>    
             </header>
